# extractive-structures

./: .gitignore  README.md  pyproject.toml
dsets/: augmented_cities.json  names.csv
notebooks/: paper_plots.ipynb  run_sweep_models.ipynb  visualize_sweep_models.ipynb
paper_experiments/sweep_all/: full_gemma_27b_1e-05_12.yaml  full_gemma_27b_1e-05_16.yaml  full_gemma_27b_1e-05_4.yaml  full_gemma_27b_1e-05_8.yaml  full_gemma_27b_1e-06_12.yaml  full_gemma_27b_1e-06_16.yaml  full_gemma_27b_1e-06_4.yaml  full_gemma_27b_1e-06_8.yaml  full_gemma_27b_3e-05_12.yaml  full_gemma_27b_3e-05_16.yaml  full_gemma_27b_3e-05_4.yaml  full_gemma_27b_3e-05_8.yaml  full_gemma_27b_3e-06_12.yaml  full_gemma_27b_3e-06_16.yaml  full_gemma_27b_3e-06_4.yaml  full_gemma_27b_3e-06_8.yaml  full_llama_1b_1e-05_12.yaml  full_llama_1b_1e-05_16.yaml  full_llama_1b_1e-05_4.yaml  full_llama_1b_1e-05_8.yaml  full_llama_1b_1e-06_12.yaml  full_llama_1b_1e-06_16.yaml  full_llama_1b_1e-06_4.yaml  full_llama_1b_1e-06_8.yaml  full_llama_1b_3e-05_12.yaml  full_llama_1b_3e-05_16.yaml  full_llama_1b_3e-05_4.yaml  full_llama_1b_3e-05_8.yaml  full_llama_1b_3e-06_12.yaml  full_llama_1b_3e-06_16.yaml  full_llama_1b_3e-06_4.yaml  full_llama_1b_3e-06_8.yaml  full_llama_70b_1e-05_12.yaml  full_llama_70b_1e-05_16.yaml  full_llama_70b_1e-05_4.yaml  full_llama_70b_1e-05_8.yaml  full_llama_70b_1e-06_12.yaml  full_llama_70b_1e-06_16.yaml  full_llama_70b_1e-06_4.yaml  full_llama_70b_1e-06_8.yaml  (+8 more)
slurm/: eval_ocr.sh
src/extractive_structures/: __init__.py  data_ordering.py  datasets.py  extractive_scores.py  gradients.py  (+7 more)
(+10 files in other folders)
